--- a/cfp.html
+++ b/cfp.html
@@ -69,7 +69,7 @@
     <p> Reviewing will be double-blind. Authors must make a good faith effort to anonymize their submissions, and they should not identify themselves either explicitly or by implication (e.g., through the references or acknowledgments). Submissions violating the detailed formatting and anonymization rules will not be considered for review.</p>
 
     <div class="row-fluid bordertop">
-    <h2> <span class="firstword">Format </span> Fequirements</h2>
+    <h2> <span class="firstword">Format </span> Requirements</h2>
       <p>Submitted Full Papers must be<strong> no longer than 6 page</strong> with IEEE Standard template. IEEE Standard template for Latex and Word can be found at:</p>
       <p><strong><a href="https://www.ieee.org/conferences/publishing/templates.html">https://www.ieee.org/conferences/publishing/templates.html</a></strong></p>
       <p>Accepted papers will be allowed 2 additional pages in the proceedings.</p>
