--- a/cfp.html
+++ b/cfp.html
@@ -107,6 +107,24 @@
           <p><i class="icon-star"></i>Venue Name: Park Plaza Beijing Science Park</p>
           </span> </div>
 
+
+    </div>
+    <div class="span4">
+      <h2> <span class="firstword">Conference</span> Sponsorship</h2>
+
+      <div class="benefit first clearfix">
+        <img src="assets\img\1.jpg">
+      </div>
+      <div class="benefit first clearfix">
+        <img src="assets\img\2.jpg">
+      </div>
+      <div class="benefit first clearfix">
+        <img src="assets\img\3.jpg">
+      </div>
+      <div class="benefit first clearfix">
+        <img src="assets\img\4.jpg">
+      </div>
+
     </div>
 
 </div>
