--- a/cfp.html
+++ b/cfp.html
@@ -77,7 +77,16 @@
       <p>We also welcome<strong> Short Papers</strong> on any of the above topics, which will be judged separately from papers in the research track of the conference. Submitted short papers must be no longer than 2 pages. Accepted papers will not be allowed additional pages in the proceedings.</p>
       <br>
       <p>Papers not meeting these criteria will be rejected without review, and no deadline extensions will be granted for reformatting.</p>
+      <br>
+      <p><strong>Submission link:</strong><a href=" https://easychair.org/conferences/?conf=sagc2020"> https://easychair.org/conferences/?conf=sagc2020</a></p>
     </div>
+
+    <div class="row-fluid bordertop">
+      <h2> <span class="firstword">Important </span> Dates</h2>
+      <p><strong>Paper submission due:</strong> Stempber 20, 2020</p>
+      <p><strong>Notification to authors:</strong> October 20, 2020</p>
+      <p><strong>Camera ready manuscript due:</strong> November 7, 2020</p>
+       </div>
 
 
   </div>
@@ -89,8 +98,8 @@
 
       <div class="benefit first clearfix">
           <div class="perks-title">Conference Title</div>
-          <p>2020 International Conference on Space-Air-Ground Computing </p>
-          <p><i class="icon-resize-small"></i> Conference Acronym: SAGC</p>
+          <p>2020 IEEE International Conference on Space-Air-Ground Computing  </p>
+          <p><i class="icon-resize-small"></i> Conference Acronym: IEEE SAGC 2020</p>
            </div>
 
 
@@ -123,6 +132,13 @@
       </div>
       <div class="benefit first clearfix">
         <img src="assets\img\4.jpg">
+      </div>
+      <div class="benefit first clearfix" align="center" >
+        <img src="assets\img\5.jpg"width="120" height="120" >
+
+      </div>
+      <div class="benefit first clearfix" align="center">
+        <img src="assets\img\6.jpg"width="120" height="120" >
       </div>
 
     </div>
