--- a/committee.html
+++ b/committee.html
@@ -46,19 +46,21 @@
 <div class="container">
   <div class="row-fluid textleft">
   <div class="span8">
-    <h2> <span class="firstword">General</span> Chair</h2>
+    <h2> <span class="firstword">General</span> Chairs</h2>
 
     <div class="benefit clearfix">
           <div class="perks-title"> Shangguang Wang</div>
           <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications
-          <p><i class="icon-envelope"></i> sgwang@bupt.edu.cn</p>
+          <!--<p><i class="icon-envelope"></i> sgwang@bupt.edu.cn</p>-->
           </div>
 
     <div class="benefit clearfix">
       <div class="perks-title"> Ching-Hsien Hsu</div>
       <i class="icon-briefcase"></i> Asia University
-      <p><i class="icon-envelope"></i> robertchh@gmail.com</p>
+      <!--<p><i class="icon-envelope"></i> robertchh@gmail.com</p>-->
     </div>
+
+    <!--
 
     <div class="row-fluid bordertop">
       <h2> <span class="firstword">Conference</span> Treasurer</h2>
@@ -78,14 +80,21 @@
         <p><i class="icon-envelope"></i> lingy_zhang@163.com</p>
       </div>
     </div>
+    -->
 
     <div class="row-fluid bordertop">
-      <h2> <span class="firstword">Technical Program</span> Chair</h2>
+      <h2> <span class="firstword">Program</span> Chairs</h2>
 
       <div class="benefit clearfix">
-        <div class="perks-title"> Dr. Ning Zhang</div>
-        <i class="icon-briefcase"></i> Texas A&M University-Corpus Christi
-        <p><i class="icon-envelope"></i> ning.zhang@tamucc.edu</p>
+        <div class="perks-title"> Ning Zhang</div>
+        <i class="icon-briefcase"></i> University of Windsor
+        <!--<p><i class="icon-envelope"></i> ning.zhang@tamucc.edu</p>-->
+      </div>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Ao Zhou</div>
+        <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications
+        <!--<p><i class="icon-envelope"></i> ning.zhang@tamucc.edu</p>-->
       </div>
     </div>
   </div>
@@ -94,10 +103,10 @@
       <h2> <span class="firstword">Conference</span> Information</h2>
 
       <div class="benefit first clearfix">
-          <div class="perks-title">Conference Title</div>
-          <p>2020 International Conference on Space-Air-Ground Computing </p>
-          <p><i class="icon-resize-small"></i> Conference Acronym: SAGC</p>
-           </div>
+        <div class="perks-title">Conference Title</div>
+        <p>2020 IEEE International Conference on Space-Air-Ground Computing  </p>
+        <p><i class="icon-resize-small"></i> Conference Acronym: IEEE SAGC 2020</p>
+      </div>
 
 
       <div class="benefit clearfix"> <span class="benefit_text">
@@ -128,6 +137,13 @@
       </div>
       <div class="benefit first clearfix">
         <img src="assets\img\4.jpg">
+      </div>
+      <div class="benefit first clearfix" align="center" >
+        <img src="assets\img\5.jpg"width="120" height="120" >
+
+      </div>
+      <div class="benefit first clearfix" align="center">
+        <img src="assets\img\6.jpg"width="120" height="120" >
       </div>
 
     </div>
