--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       <h2> <span class="firstword">Conference</span> Information</h2>
 
       <div class="benefit first clearfix">
-          <div class="perks-title">Conference Title</div>
-          <p>2020 International Conference on Space-Air-Ground Computing </p>
-          <p><i class="icon-resize-small"></i> Conference Acronym: SAGC</p>
-           </div>
+        <div class="perks-title">Conference Title</div>
+        <p>2020 IEEE International Conference on Space-Air-Ground Computing  </p>
+        <p><i class="icon-resize-small"></i> Conference Acronym: IEEE SAGC 2020</p>
+      </div>
 
 
       <div class="benefit clearfix"> <span class="benefit_text">
@@ -113,6 +113,13 @@
       </div>
       <div class="benefit first clearfix">
         <img src="assets\img\4.jpg">
+      </div>
+      <div class="benefit first clearfix" align="center" >
+        <img src="assets\img\5.jpg"width="120" height="120" >
+
+      </div>
+      <div class="benefit first clearfix" align="center">
+        <img src="assets\img\6.jpg"width="120" height="120" >
       </div>
 
     </div>
