--- a/cfp.html
+++ b/cfp.html
@@ -65,6 +65,8 @@
           <li><i class="icon-search"></i> Edge network and system</li>
           <li><i class="icon-search"></i> Container and Cloud</li>
           <li><i class="icon-search"></i> Industrial internet and system</li>
+          <li><i class="icon-search"></i> Security and privacy</li>
+          <li><i class="icon-search"></i> AI for space-air-ground integrated system</li>
         </ul>
     <p> Reviewing will be double-blind. Authors must make a good faith effort to anonymize their submissions, and they should not identify themselves either explicitly or by implication (e.g., through the references or acknowledgments). Submissions violating the detailed formatting and anonymization rules will not be considered for review.</p>
 
@@ -78,7 +80,7 @@
       <br>
       <p>Papers not meeting these criteria will be rejected without review, and no deadline extensions will be granted for reformatting.</p>
       <br>
-      <p><strong>Submission link:</strong><a href=" https://easychair.org/conferences/?conf=sagc2020"> https://easychair.org/conferences/?conf=sagc2020</a></p>
+      <p><strong>Submission link:</strong><a href=" https://cmt3.research.microsoft.com/SAGC2020"> https://cmt3.research.microsoft.com/SAGC2020</a></p>
     </div>
 
     <div class="row-fluid bordertop">
@@ -87,11 +89,7 @@
       <p><strong>Notification to authors:</strong> October 20, 2020</p>
       <p><strong>Camera ready manuscript due:</strong> November 7, 2020</p>
        </div>
-
-
   </div>
-
-
 
     <div class="span4">
       <h2> <span class="firstword">Conference</span> Information</h2>
@@ -135,10 +133,11 @@
       </div>
       <div class="benefit first clearfix" align="center" >
         <img src="assets\img\5.jpg"width="120" height="120" >
+        <img src="assets\img\6.jpg"width="120" height="120" >
 
       </div>
-      <div class="benefit first clearfix" align="center">
-        <img src="assets\img\6.jpg"width="120" height="120" >
+      <div class="benefit first clearfix">
+        <img src="assets\img\7.png">
       </div>
 
     </div>
