--- a/committee.html
+++ b/committee.html
@@ -46,20 +46,43 @@
 <div class="container">
   <div class="row-fluid textleft">
   <div class="span8">
+
+
+      <h2> <span class="firstword">Honorary</span> Chairs</h2>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Ping Zhang</div>
+        <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications,China
+      </div>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Xuemin (Sherman) Shen</div>
+        <i class="icon-briefcase"></i> University of Waterloo,Canada
+      </div>
+
+
+    <div class="row-fluid bordertop">
     <h2> <span class="firstword">General</span> Chairs</h2>
 
     <div class="benefit clearfix">
           <div class="perks-title"> Shangguang Wang</div>
-          <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications
+          <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications,China
           <!--<p><i class="icon-envelope"></i> sgwang@bupt.edu.cn</p>-->
           </div>
 
     <div class="benefit clearfix">
       <div class="perks-title"> Ching-Hsien Hsu</div>
-      <i class="icon-briefcase"></i> Asia University
+      <i class="icon-briefcase"></i> Asia University,Taiwan
       <!--<p><i class="icon-envelope"></i> robertchh@gmail.com</p>-->
     </div>
 
+      <div class="benefit clearfix">
+        <div class="perks-title"> Qinyu Zhang</div>
+        <i class="icon-briefcase"></i> Harbin Institute of Technology (Shenzhen),China
+        <!--<p><i class="icon-envelope"></i> robertchh@gmail.com</p>-->
+    </div>
+
+    </div>
     <!--
 
     <div class="row-fluid bordertop">
@@ -82,19 +105,105 @@
     </div>
     -->
 
+
+
     <div class="row-fluid bordertop">
       <h2> <span class="firstword">Program</span> Chairs</h2>
 
       <div class="benefit clearfix">
         <div class="perks-title"> Ning Zhang</div>
-        <i class="icon-briefcase"></i> University of Windsor
+        <i class="icon-briefcase"></i> University of Windsor,Canada
         <!--<p><i class="icon-envelope"></i> ning.zhang@tamucc.edu</p>-->
       </div>
 
       <div class="benefit clearfix">
         <div class="perks-title"> Ao Zhou</div>
-        <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications
+        <i class="icon-briefcase"></i> Beijing University of Posts and Telecommunications,China
         <!--<p><i class="icon-envelope"></i> ning.zhang@tamucc.edu</p>-->
+      </div>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Minho Jo</div>
+        <i class="icon-briefcase"></i> Korea University,South Korea
+      </div>
+    </div>
+
+
+    <div class="row-fluid bordertop">
+      <h2> <span class="firstword">Computing</span> Track Chair</h2>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Xianfu Chen</div>
+        <i class="icon-briefcase"></i> VTT Tech. Research Centre, Finland
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Suzhi Cao</div>
+        <i class="icon-briefcase"></i>  Chinese Academy of Sciences, China
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Kaijun Ren</div>
+        <i class="icon-briefcase"></i>  National Univ. of Defense Technology, China
+      </div>
+    </div>
+
+    <div class="row-fluid bordertop">
+      <h2> <span class="firstword">Communication</span> Track Chair</h2>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Celimuge Wu</div>
+        <i class="icon-briefcase"></i>Uni. of Electro-Communications, Japan
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Nan Zhao</div>
+        <i class="icon-briefcase"></i>Dalian University of Technology, China
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Tingting Zhang</div>
+        <i class="icon-briefcase"></i>HIT (Shenzhen), China
+      </div>
+    </div>
+
+
+    <div class="row-fluid bordertop">
+      <h2> <span class="firstword">Security and Privacy</span> Track Chair</h2>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Mohamed Mahmoud</div>
+        <i class="icon-briefcase"></i> Tennessee Technological Uni., USA
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Dajiang Chen</div>
+        <i class="icon-briefcase"></i> UESTC, China
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Kok-Seng Wong</div>
+        <i class="icon-briefcase"></i>  VinUniversity, Vietnam
+      </div>
+    </div>
+
+    <div class="row-fluid bordertop">
+      <h2> <span class="firstword">Publication</span> Chair</h2>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Lingyan Zhang</div>
+        <i class="icon-briefcase"></i> Central South University,China
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Chunhe Song</div>
+        <i class="icon-briefcase"></i> Chinese Academy of Sciences, China
+      </div>
+      <div class="benefit clearfix">
+        <div class="perks-title"> Rongfei Fan</div>
+        <i class="icon-briefcase"></i> Beijing Institute of Technology, China
+      </div>
+    </div>
+
+    <div class="row-fluid bordertop">
+      <h2> <span class="firstword">Web</span> Chair</h2>
+
+      <div class="benefit clearfix">
+        <div class="perks-title"> Jingyun Wang</div>
+        <i class="icon-briefcase"></i> BUPT, China
       </div>
     </div>
   </div>
@@ -140,10 +249,11 @@
       </div>
       <div class="benefit first clearfix" align="center" >
         <img src="assets\img\5.jpg"width="120" height="120" >
+        <img src="assets\img\6.jpg"width="120" height="120" >
 
       </div>
-      <div class="benefit first clearfix" align="center">
-        <img src="assets\img\6.jpg"width="120" height="120" >
+      <div class="benefit first clearfix">
+        <img src="assets\img\7.png">
       </div>
 
     </div>
