--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           <li><i class="icon-search"></i> Edge network and system</li>
           <li><i class="icon-search"></i> Container and Cloud</li>
           <li><i class="icon-search"></i> Industrial internet and system</li>
-
+          <li><i class="icon-search"></i> Security and privacy</li>
+          <li><i class="icon-search"></i> AI for space-air-ground integrated system</li>
         </ul>
     </div>
   </div>
@@ -116,10 +117,11 @@
       </div>
       <div class="benefit first clearfix" align="center" >
         <img src="assets\img\5.jpg"width="120" height="120" >
+        <img src="assets\img\6.jpg"width="120" height="120" >
 
       </div>
-      <div class="benefit first clearfix" align="center">
-        <img src="assets\img\6.jpg"width="120" height="120" >
+      <div class="benefit first clearfix">
+        <img src="assets\img\7.png">
       </div>
 
     </div>
